--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>  
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_vtc"
         android:label="@string/app_name" 
         android:name="Application">
         <activity
